langtools/test/tools/javac/proprietary/WarnImport.out
WarnImport.java:12:25: compiler.warn.sun.proprietary: sun.security.x509.X509CertInfo
- compiler.err.warnings.and.werror
1 error
1 warning
